added main containers

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="social"></div>
+        <div class="social"></div>
+        <div class="social"></div>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
