--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
 </head>
 <body>
     <div class="container">
-        <div class="social"></div>
-        <div class="social"></div>
-        <div class="social"></div>
+        <div class="social">
+            <i class="fa-brands fa-twitter fa-2xl" style="color: #000000;"></i>
+            <h1 id="twitter-counter">0</h1>
+            <h2>Twitter Followers</h2>
+        </div>
+        <div class="social">
+            <i class="fa-brands fa-youtube fa-2xl" style="color: #000000;"></i>
+            <h1 id="youtube-counter">0</h1>
+            <h2>YouTube Followers</h2>
+        </div>
+        <div class="social">
+            <i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i>
+            <h1 id="facebook-counter">0</h1>
+            <h2>Facebook Followers</h2>
+        </div>
     </div>
     <script src="scripts.js"></script>
+    <script
+        src="https://kit.fontawesome.com/90f76945fa.js"
+        crossorigin="anonymous"
+    ></script>
 </body>
 </html>
